--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,17 @@
   width: 1200px;
 
   grid-template-areas:
-  "h h"
-  "n c";
+    "h h"
+    "n c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
+}
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: whitesmoke;
+    padding-top: 20px;
+    padding-left: 15px;
+    margin-left: 20px; 
 }
