--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #505050;
+}
+
 .app-wrapper {
   margin: 0 auto;
   display: grid;
@@ -12,9 +16,11 @@
 }
 
 .app-wrapper-content {
+  color: white;
     grid-area: c;
-    background-color: whitesmoke;
+    background-color: #424242;
     padding-top: 20px;
     padding-left: 15px;
-    margin-left: 20px; 
+    margin-left: 20px;
+    margin-top: 25px;
 }
