--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -15,3 +15,17 @@
 .item a.active {
   color: #007bff;
 }
+
+.friendsBar {
+  margin: 0 auto;
+  display: grid;
+  width: auto;
+
+  grid-template-areas:
+    "f f f";
+}
+
+.friend {
+  grid-area: f;
+  
+}
