--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -17,15 +17,26 @@
 }
 
 .friendsBar {
-  margin: 0 auto;
-  display: grid;
+  margin-left: auto;
+  margin-right: auto;
   width: auto;
-
-  grid-template-areas:
-    "f f f";
+  color: white;
+  border-style: solid;
+  margin-top: 100px;
 }
 
-.friend {
-  grid-area: f;
-  
+.friendsBar img {
+  width: 40px;
+  height: 40px;
+  padding:1px;
+  margin-left: 4.5px;
+  margin-right: 4.5px;
+}
+
+.friendsBar h3{
+text-align: center;
+}
+
+.friendsIcons {
+
 }
