--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -27,5 +27,15 @@
 }
 
 .message {
-    padding: 10px;
+    padding: 0
+}
+
+.btn {
+    padding-left:0;
+    padding-bottom: 5px;
+}
+
+.messageText {
+    padding-left: 10px;
+    margin-bottom: 10px;
 }
