--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -8,3 +8,20 @@
   .header img {
     padding: 20px;
   }
+
+  .loginBlock {
+    float: right;
+    padding-right: 20px;
+    padding-top: 40px;
+    color: white;
+    font-weight: bold;
+  }
+
+  .loginBlock a {
+    text-decoration: none;
+    font-size: 20px;
+  }
+
+  .loginBlock a:active {
+    color: #007bff;
+  }
