--- a/src/Components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
+++ b/src/Components/Profile/MyPosts/ProfileInfo/ProfileInfo.module.css
@@ -1,41 +1,7 @@
 .image img {
-    height: auto;
-    width: 100%;
-}
-
-.row {
-    display: flex;
-    border-style: outset;
-}
-
-.column {
-    flex: 50%;
-    padding: 30px;
-    text-decoration: none;
-}
-
-.column a {
-    text-decoration: none;
-    color: white;
-    font-size: 25px;
-    list-style-type: none;
-}
-.column li {
-
-    list-style-type: none;
-}
-
-.column h2 {
-    font-size: 35px;
-    color: #007bff;
-}
-
-.column img {
     border-radius: 150px;
 }
 
-.lookinForAJob {
-    font-size: 20px;
-    padding-left: 42px;
-    padding-top: 150px;
-}
+a:hover {
+    cursor:pointer;
+   }
