--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #505050;
 }
@@ -5,21 +9,19 @@ body {
 .app-wrapper {
   margin: 0 auto;
   display: grid;
-  width: 1200px;
+  width: 80%;
 
   grid-template-areas:
     "h h"
-    "n c";
-  grid-template-rows: 60px 1fr;
+    "n c"
+    "f f";
+  grid-template-rows: 1fr 10fr;
   grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
+
 }
 
 .app-wrapper-content {
-  color: white;
+    color: white;
     grid-area: c;
-    background-color: #424242;
-    padding: 20px;
-    margin-left: 20px;
-    margin-top: 25px;
+    background-color: #623333;
 }
