--- a/src/Components/Common/FormsControls/FormsControls.module.css
+++ b/src/Components/Common/FormsControls/FormsControls.module.css
@@ -2,12 +2,14 @@
 .formControl.error input,
 .error textarea
 {
-    border: solid red 2px;
+    border: solid rgb(197, 67, 67) 1px;
 }
 
 .formControl.error span
 {
-    color:red;
+    color:rgb(197, 67, 67);
+    padding-left: 10px;
+    font-size: 0.9em;
 }
 
 .formSummaryError
@@ -15,4 +17,52 @@
     border: solid  rosybrown;
     padding: 5px;
     color: rosybrown;
+}
+.formControl{
+    display: inline-block;
+}
+
+.loginForm{
+    background-color: white;
+    color: #666666;
+    position: absolute;
+    left: 50%;
+    top:30%;
+    border: none;
+    border-radius: 10px;
+    padding: 0px 20px 20px 20px;
+    box-shadow: 10px 10px 20px rgb(37, 37, 37);
+}
+
+.loginForm h1{
+text-align: center;
+}
+
+.inputs input {
+   padding: 10px;
+   font-size: 15px;
+   color: #666666;
+   border: none;
+   outline: none;
+   margin: 5px;
+   box-shadow: 1px 1px 3px rgb(190, 190, 190);
+}
+input[name=rememberMe] {
+}
+.fieldText {
+    display: inline;
+    font-size: small;
+}
+
+.loginBtn button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-transform: uppercase;
+    width: 100%;
+    height: 35px;
+    background-color: #4272d7;
+    border: none;
+    box-shadow: 1px 1px 3px rgb(190, 190, 190);
 }
