--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,16 +1,47 @@
 .header {
-    grid-area: h;
-    background-color: #343434;
+    background-color: #e44d3a;
+    height:56px;
+    width: 100%;
+    margin-bottom: 60px;
   }
   
   .header img {
-    padding: 20px;
+    padding-top: 10px;
+  }
+
+  .headerData {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  .headerSearch {
+    display: inline-block;
+    position: absolute;
+    width: 25%;
+    margin-top: 9px;
+    margin-left: 20px;
+  }
+
+  .headerSearch input {
+    padding-left: 10px;
+    height: 38px;
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .headerData i {
+    color: #e44d3a;
+    position: absolute;
+    margin-left: -27px;
+    font-size: 24px;
+    margin-top: 6px;
   }
 
   .loginBlock {
     float: right;
     padding-right: 20px;
-    padding-top: 40px;
+    padding-top: 20px;
     font-weight: bold;
     color: white;
   }
