--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,7 +2,7 @@
     background-color: #e44d3a;
     height:56px;
     width: 100%;
-    margin-bottom: 60px;
+    margin-bottom: 5vh;
   }
   
   .header img {
