--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,28 @@
 }
 
 body {
-  background-color: #505050;
+  background-color: #ececec;
 }
 
 
 
 .app-wrapper {
   margin: 0 auto;
+  height: 100vh;
   display: grid;
   width: 80%;
   grid-template-areas:
     "n c"
     "f f";
   grid-template-rows: 1fr 10fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 1fr 3fr;
 
 }
 
 .app-wrapper-content {
-    color: white;
-    grid-area: c;
-    background-color: #623333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: c;
+  background-color: #ffffff;
 }
