--- a/src/Components/Common/FormsControls/FormsControls.module.css
+++ b/src/Components/Common/FormsControls/FormsControls.module.css
@@ -19,15 +19,13 @@
     color: rosybrown;
 }
 .formControl{
-    display: inline-block;
+    padding: 10px;
 }
 
 .loginForm{
+    display: inline-block;
     background-color: white;
     color: #666666;
-    position: absolute;
-    left: 50%;
-    top:30%;
     border: none;
     border-radius: 10px;
     padding: 0px 20px 20px 20px;
