--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -1,21 +1,22 @@
 .dialogs {
+    width:100%;
     display: grid;
     grid-template-columns: 2fr 10fr;
-    color:white;
+    color:rgb(173, 173, 173);
 }
 
 .dialogsItem {
     padding: 10px;
-    
 }
 
 .dialogsItem a {
     text-decoration: none;
-    color: white;   
+    color:rgb(173, 173, 173);
 }
 
 .dialogsItem .active {
-    color: #007bff;   
+    color: #E34D3C;
+    font-weight: bold;
 }
 
 .dialog {
